// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi Select renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full opacity-30 cursor-not-allowed"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r10:"
        onClick={[Function]}
      >
        Small
      </label>
      <button
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3 opacity-30 cursor-not-allowed"
        disabled={true}
        id="headlessui-listbox-button-:r11:"
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full opacity-30 cursor-not-allowed"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r13:"
        onClick={[Function]}
      >
        Medium
      </label>
      <button
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 opacity-30 cursor-not-allowed"
        disabled={true}
        id="headlessui-listbox-button-:r14:"
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full opacity-30 cursor-not-allowed"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r16:"
        onClick={[Function]}
      >
        Large
      </label>
      <button
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4 opacity-30 cursor-not-allowed"
        disabled={true}
        id="headlessui-listbox-button-:r17:"
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full opacity-30 cursor-not-allowed"
  >
    <div
      className="relative"
    >
      <button
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4 opacity-30 cursor-not-allowed"
        disabled={true}
        id="headlessui-listbox-button-:r19:"
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <label
            className="block text-moon-12 text-trunks"
            id="headlessui-listbox-label-:r1a:"
            onClick={[Function]}
          >
            xLarge
          </label>
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`Multi Select renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1c:"
        onClick={[Function]}
      >
        Small
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3 shadow-input-err hover:shadow-input-err focus:shadow-input-err"
        disabled={false}
        id="headlessui-listbox-button-:r1d:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-chiChi"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1f:"
        onClick={[Function]}
      >
        Medium
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3 shadow-input-err hover:shadow-input-err focus:shadow-input-err"
        disabled={false}
        id="headlessui-listbox-button-:r1g:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-chiChi"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1i:"
        onClick={[Function]}
      >
        Large
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4 shadow-input-err hover:shadow-input-err focus:shadow-input-err"
        disabled={false}
        id="headlessui-listbox-button-:r1j:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-chiChi"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4 shadow-input-err hover:shadow-input-err focus:shadow-input-err"
        disabled={false}
        id="headlessui-listbox-button-:r1l:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <label
            className="block text-moon-12 text-trunks"
            id="headlessui-listbox-label-:r1m:"
            onClick={[Function]}
          >
            xLarge
          </label>
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-chiChi"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`Multi Select renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:rk:"
        onClick={[Function]}
      >
        Small
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3"
        disabled={false}
        id="headlessui-listbox-button-:rl:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:rn:"
        onClick={[Function]}
      >
        Medium
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3"
        disabled={false}
        id="headlessui-listbox-button-:ro:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:rq:"
        onClick={[Function]}
      >
        Large
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4"
        disabled={false}
        id="headlessui-listbox-button-:rr:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4"
        disabled={false}
        id="headlessui-listbox-button-:rt:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <label
            className="block text-moon-12 text-trunks"
            id="headlessui-listbox-label-:ru:"
            onClick={[Function]}
          >
            xLarge
          </label>
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
    <p
      className="inline-block mt-2 ps-4 text-moon-12 text-trunks"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`Multi Select renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r0:"
        onClick={[Function]}
      >
        Small
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3"
        disabled={false}
        id="headlessui-listbox-button-:r1:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r3:"
        onClick={[Function]}
      >
        Medium
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3"
        disabled={false}
        id="headlessui-listbox-button-:r4:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r6:"
        onClick={[Function]}
      >
        Large
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4"
        disabled={false}
        id="headlessui-listbox-button-:r7:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4"
        disabled={false}
        id="headlessui-listbox-button-:r9:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <label
            className="block text-moon-12 text-trunks"
            id="headlessui-listbox-label-:ra:"
            onClick={[Function]}
          >
            xLarge
          </label>
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Multi Select renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3"
        disabled={false}
        id="headlessui-listbox-button-:rc:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3"
        disabled={false}
        id="headlessui-listbox-button-:re:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4"
        disabled={false}
        id="headlessui-listbox-button-:rg:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4"
        disabled={false}
        id="headlessui-listbox-button-:ri:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-trunks"
          >
            Choose an option
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Multi Select with diferent option 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1o:"
        onClick={[Function]}
      >
        Country
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3"
        disabled={false}
        id="headlessui-listbox-button-:r1p:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-14 text-bulma"
          >
            <div
              className="flex "
            >
              <div
                className="me-4"
              >
                🇬🇧
              </div>
              <div>
                English
              </div>
            </div>
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1r:"
        onClick={[Function]}
      >
        Country
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3"
        disabled={false}
        id="headlessui-listbox-button-:r1s:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-bulma"
          >
            <div
              className="flex "
            >
              <div
                className="me-4"
              >
                🇬🇧
              </div>
              <div>
                English
              </div>
            </div>
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <label
        className="block text-moon-16 text-bulma pb-2"
        id="headlessui-listbox-label-:r1u:"
        onClick={[Function]}
      >
        Country
      </label>
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4"
        disabled={false}
        id="headlessui-listbox-button-:r1v:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <span
            className="text-moon-16 text-bulma"
          >
            <div
              className="flex "
            >
              <div
                className="me-4"
              >
                🇬🇧
              </div>
              <div>
                English
              </div>
            </div>
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
  <div
    className="w-full"
  >
    <div
      className="relative"
    >
      <button
        aria-expanded={false}
        aria-haspopup={true}
        className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4"
        disabled={false}
        id="headlessui-listbox-button-:r21:"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        type="button"
      >
        <div
          className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
        >
          <label
            className="block text-moon-12 text-trunks"
            id="headlessui-listbox-label-:r22:"
            onClick={[Function]}
          >
            Country
          </label>
          <span
            className="text-moon-16 text-bulma"
          >
            <div
              className="flex "
            >
              <div
                className="me-4"
              >
                🇬🇧
              </div>
              <div>
                English
              </div>
            </div>
          </span>
        </div>
        <div
          className="flex-shrink-0"
        >
          <svg
            className="text-[1.5rem] text-trunks"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M25 11.5l-9 9-9-9"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Multi Select with option width 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="w-40"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-8 py-1 p-3"
          disabled={false}
          id="headlessui-listbox-button-:r24:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
          >
            <span
              className="text-moon-14 text-trunks"
            >
              Choose...
            </span>
          </div>
          <div
            className="flex-shrink-0"
          >
            <svg
              className="text-[1.5rem] text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="w-40"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-10 py-2 px-3"
          disabled={false}
          id="headlessui-listbox-button-:r26:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
          >
            <span
              className="text-moon-16 text-trunks"
            >
              Choose...
            </span>
          </div>
          <div
            className="flex-shrink-0"
          >
            <svg
              className="text-[1.5rem] text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="w-64"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-12 py-3 px-4"
          disabled={false}
          id="headlessui-listbox-button-:r28:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
          >
            <span
              className="text-moon-16 text-trunks"
            >
              Choose...
            </span>
          </div>
          <div
            className="flex-shrink-0"
          >
            <svg
              className="text-[1.5rem] text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="w-64"
  >
    <div
      className="w-full"
    >
      <div
        className="relative"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="flex items-center justify-between w-full rounded-moon-i-md bg-gohan border-beerus shadow-input hover:shadow-input-hov transition-shadow duration-200  focus:shadow-input-focus focus:outline-none h-14 py-2 px-4"
          disabled={false}
          id="headlessui-listbox-button-:r2a:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          type="button"
        >
          <div
            className="flex flex-col items-start overflow-hidden text-ellipsis whitespace-nowrap"
          >
            <label
              className="block text-moon-12 text-trunks"
              id="headlessui-listbox-label-:r2b:"
              onClick={[Function]}
            >
              xLarge
            </label>
            <span
              className="text-moon-16 text-trunks"
            >
              Choose...
            </span>
          </div>
          <div
            className="flex-shrink-0"
          >
            <svg
              className="text-[1.5rem] text-trunks"
              fill="none"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
